--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -1,5 +1,6 @@
-body {
-  margin: 0;
+body, html {
+  margin: 0px;
+  padding: 0px;
   background-color: black;
   background-position: center;
   background-size: cover;
