--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -5,7 +5,7 @@ body, html {
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 90vmin;
+  height: 100%;
   background-image: url('/assets/background.png');
   background-repeat: repeat;
 }
