--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -6,6 +6,6 @@ body, html {
   background-size: cover;
   width: 100%;
   height: 100%;
-  background-image: url('/assets/background.png');
+  background-image: url('background.png');
   background-repeat: repeat;
 }
